--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,7 @@
 
 en:
+  application_helper:
+    ror_tutorial: "Ruby on Rails turotial Sample App"
   static_page:
     home: 
       title:  "I18n_app"
@@ -18,13 +20,25 @@ en:
       help: "Help"
     about:
       about: "About"
+  sessions:
+    new:
+      login: "Log In"
+      email: "email"
+      password: "password"
+      signup: "Sign up now!!!"
+      new: "New user?"
+    create:
+      danger: "Invalid email/password combination!"
   layouts:
     header:
       home: "Home"
       help: "Help"
       login: "Login"
+      signup: "Sign up"
       sample : "SAMPLE APP"
       samplea: "sample app"
+      logout: "Logout"
+      account: "Account"
     footer:
       about: "About"
       contact: "Contacts"
@@ -56,5 +70,6 @@ en:
     create:
       welcome: "Welcome to the Sample App!"
     show: 
-      usernotfound: "User not found!!!"
+      usernotfound: "User not found!!!" 
+      
       
